Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96618

qtquick3d examples fail to build for QNX

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 6.2.0
    • 6.2.0 RC
    • Quick: 3D
    • None
    • QNX
    • 3a93a16ce7a066df82eb93ce35a24ce8020a0d1b (qt/qtshadertools/dev) 96f6680a479c2ab37b3fe08bb7cbdb3cc548c50c (qt/qtshadertools/6.2) 4e6ba8c1edaebb31170eb6f6a57ea5e20d1cdd07 (qt/qtshadertools/6.2.0)

      Examples fail to build for QNX with:

      qtbase/lib/libQt6ShaderTools.so.6.2.0: undefined reference to `nl_langinfo(int)'

      QNX does support ln_langinfo but langinfo.h from toolchain don't have 'extern "C"'.

      Possible solutions are adding extern "C" for #include <langinfo.h> in qtshadertools/src/3rdparty/SPIRV-Cross/spirv-glsl.cpp or use same fall back as older Androids and Integrity are using since they don't support ln_langinfo

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.graphics.and.multimedia Qt Graphics Team
            myrjana Marianne Yrjänä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes