SPIRV-Cross: Fix build on QNX

Fixes: QTBUG-96618
Pick-to: 6.2 6.2.0
Change-Id: I3fea15b154a5f1bbc54289e546af0496be5943c7
Reviewed-by: Marianne Yrjänä <marianne.yrjana@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>